--- a/confiag.yml
+++ b/confiag.yml
@@ -24,11 +24,11 @@ db:
   type: postgres
 
   # PostgreSQL / MySQL / MariaDB / MS SQL Server only:
-  host: localhost
-  port: 5432
-  user: wikijs
-  pass: wikijsrocks
-  db: wiki
+  host: ${DB_HOST}
+  port: ${DB_PORT}
+  user: ${DB_USER}
+  pass: ${DB_PASS}
+  db: ${DB_NAME}
   ssl: false
 
   # Optional - PostgreSQL / MySQL / MariaDB only:
