--- a/config.yml
+++ b/config.yml
@@ -25,7 +25,7 @@ db:
 
   # PostgreSQL / MySQL / MariaDB / MS SQL Server only:
   host: ${DB_HOST}
-  port: ${DB_PORT}
+  port: 5432
   user: ${DB_USER}
   pass: ${DB_PASS}
   db: ${DB_NAME}
